--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,66 @@
+amqp==5.1.1
+appdirs==1.4.4
+asgiref==3.7.2
+billiard==3.6.4.0
+black==21.6b0
+cached-property==1.5.2
+celery==5.2.7
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==41.0.3
+defusedxml==0.7.1
 Django==3.2.7
-djangorestframework==3.12.4
-django-environ==0.7.0
-django-filter==21.1
+django-appconf==1.0.5
 django-autoslug==1.9.8
 django-countries==7.2.1
-Pillow==8.3.2
+django-environ==0.7.0
+django-filter==21.1
 django-phonenumber-field==5.2.0
-phonenumbers==8.12.33
-psycopg2-binary==2.9.1
-flake8==3.9.2
-black==21.6b0
-isort==5.9.3
-djoser==2.1.0
+django-templated-mail==1.1.1
+djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
+djoser==2.1.0
+flake8==3.9.2
+idna==3.4
+importlib-metadata==1.7.0
+isort==5.9.3
+itypes==1.2.0
+Jinja2==3.1.2
+kombu==5.2.4
+MarkupSafe==2.1.3
+mccabe==0.6.1
+mypy-extensions==1.0.0
+oauthlib==3.2.2
+pathspec==0.11.2
+phonenumbers==8.12.33
+Pillow==8.3.2
+prompt-toolkit==3.0.39
+psycopg2-binary==2.9.1
+pycodestyle==2.7.0
+pycparser==2.21
+pyflakes==2.3.1
 PyJWT==2.1.0
-
+python3-openid==3.2.0
+pytz==2023.3.post1
+regex==2023.8.8
+requests==2.31.0
+requests-oauthlib==1.3.1
+six==1.16.0
+social-auth-app-django==4.0.0
+social-auth-core==4.4.2
+sqlparse==0.4.4
+toml==0.10.2
+typed-ast==1.5.5
+typing_extensions==4.7.1
+uritemplate==4.1.1
+urllib3==2.0.4
+vine==5.0.0
+wcwidth==0.2.6
+zipp==3.15.0
