--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,13 @@ services:
             - media_volume:/app/mediafiles
         expose:
             - "8000"
-        ports:
-            - "8000:8000"
+        # ports:
+        #     - "8000:8000"
         env_file:
             - .env
         depends_on:
             - postgres-db
+            - redis
         networks:
             - estate-react
 
@@ -34,6 +35,58 @@ services:
             - POSTGRES_DB=${POSTGRES_DB}
         ports:
             - 5435:5432
+        networks:
+            - estate-react
+    
+    redis:
+        image: redis:5-alpine
+        networks:
+            - estate-react
+    
+    celery-worker:
+        build:
+            context: .
+            dockerfile: ./docker/local/django/Dockerfile
+        command: /start-celeryworker
+        volumes:
+            - .:/app
+        env_file:
+            - .env
+        depends_on:
+            - redis
+            - postgres-db
+        networks:
+            - estate-react
+    
+    flower:
+        build:
+            context: .
+            dockerfile: ./docker/local/django/Dockerfile
+        command: /start-flower
+        volumes:
+            - .:/app
+        env_file:
+            - .env
+        ports:
+            - "5557:5555"
+        depends_on:
+            - redis
+            - postgres-db
+        networks:
+            - estate-react
+    
+    nginx:
+        restart: always
+        depends_on:
+            - api
+        volumes:
+            - static_volume:/app/staticfiles
+            - media_volume:/app/mediafiles
+        build:
+            context: ./docker/local/nginx
+            dockerfile: Dockerfile
+        ports:
+            - "8080:80"
         networks:
             - estate-react
 
