--- a/docker/local/django/Dockerfile
+++ b/docker/local/django/Dockerfile
@@ -26,6 +26,7 @@ RUN pip3 install --upgrade pip
 
 COPY ./requirements.txt /app/requirements.txt
 RUN pip3 install -r /app/requirements.txt
+RUN pip3 install flower
 
 #  It copies the script from your local filesystem into the image, removes any carriage return characters at the end of lines
 COPY ./docker/local/django/entrypoint /entrypoint
@@ -36,7 +37,13 @@ COPY ./docker/local/django/start /start
 RUN sed -i 's/\r$//g' /start
 RUN chmod +x /start
 
+COPY ./docker/local/django/celery/worker/start /start-celeryworker
+RUN sed -i 's/\r$//g' /start-celeryworker
+RUN chmod +x /start-celeryworker
 
+COPY ./docker/local/django/celery/flower/start /start-flower
+RUN sed -i 's/\r$//g' /start-flower
+RUN chmod +x /start-flower
 
 
 ENTRYPOINT [ "/entrypoint"]
