--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ asgiref==3.7.2
 billiard==3.6.4.0
 black==21.6b0
 cached-property==1.5.2
-celery==5.2.7
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
@@ -64,3 +63,11 @@ urllib3==2.0.4
 vine==5.0.0
 wcwidth==0.2.6
 zipp==3.15.0
+celery
+flower
+redis
+django-celery-email==3.0.0
+argh
+PyYAML
+watchdog
+
