--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,17 @@ services:
             - redis
         networks:
             - estate-react
+    
+    client:
+        build:
+            context: ./client
+            dockerfile: docker/local/Dockerfile
+        restart: on-failure
+        volumes:
+            - ./client:/app
+            - /app/node_modules
+        networks:
+            - estate-react
 
     postgres-db:
         image: postgres:12.0-alpine
